Too much padding, fixing that

--- a/public/styles/less/main.less
+++ b/public/styles/less/main.less
@@ -150,7 +150,6 @@ img.avatar {
 .page{
   margin-top: 90px;
   min-height: 700px;
-  padding-top: 80px;
   h2 {
     margin-bottom: 0;
   }
